tests/vertical-slice/accept/std_bench_import_run.hew
import std::bench;

fn main() {
    let s = bench.suite("Imported Bench");
    s.add("noop", 1, || {});
    s.report();
}
