tests/vertical-slice/reject/weak_use_after_move.hew
fn main() {
    let rc = Rc::new(1);
    let weak = rc.downgrade();
    let moved = weak;
    let _ = weak.upgrade();
    let _ = moved;
}
